[package]
name = "multi_client_signature"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1", features = ["full"] }
tokio-tungstenite = { version = "0.24", features = ["native-tls"] }
serde = "1.0"
serde_json = "1.0"
clap = { version = "4.5", features = ["derive"] }
futures = "0.3"
native-tls = "0.2"
ed25519-dalek = { version = "2.1.1", features = ["rand_core"]}
rand = "0.8.5"